Fix logo position on small

--- a/src/components/organisms/NavigationBar/NavigationBar.module.scss
+++ b/src/components/organisms/NavigationBar/NavigationBar.module.scss
@@ -24,17 +24,16 @@
 }
 
 .navigation-bar__inner {
-  position: absolute;
   display: flex;
   flex-direction: column;
   justify-content: center;
   align-items: center;
   width: 100%;
-  height: 100vh;
 
-  @include tools.respond-up-to(large) {
-    &--invisible {
-      display: none;
+  &--navClosed {
+    @include tools.respond-up-to(large) {
+      flex-direction: row;
+      justify-content: flex-start;
     }
   }
 
@@ -43,12 +42,6 @@
     flex-direction: row;
     justify-content: space-between;
     height: tools.rem(90);
-  }
-}
-
-.navigation-bar__logo__mobile-wrapper {
-  @include tools.respond-from(large) {
-    display: none;
   }
 }
 
@@ -61,17 +54,24 @@
     color: $color-secondary;
   }
 
-  &--mobile {
-    height: tools.rem(60);
-    color: $color-primary;
-
-    @include tools.respond-from(large) {
-      display: none;
+  &--navOpen {
+    @include tools.respond-up-to(large) {
+      height: tools.rem(80);
+      margin-top: tools.rem(-50);
+      margin-bottom: tools.rem(50);
     }
   }
+}
+
+.navigation-bar__nav {
+  position: absolute;
+  width: 100%;
+  height: 100vh;
 
   @include tools.respond-up-to(large) {
-    display: none;
+    &--invisible {
+      display: none;
+    }
   }
 }
 
